--- a/index.html
+++ b/index.html
@@ -6,21 +6,129 @@
 <title>Image Detail Extractor</title>
 
 <style>
-body{margin:0;background:#020d06;font-family:Consolas, monospace;color:#00ff88}
-.box{max-width:540px;margin:16px auto;padding:18px;border:1px solid #00ff88;border-radius:14px;background:rgba(0,30,15,.96)}
-#backend{display:flex;flex-direction:column;align-items:center;margin-bottom:22px}
-.tick-circle{width:28px;height:28px;border:2px solid #00ff88;border-radius:50%;display:flex;align-items:center;justify-content:center;font-size:16px}
-#backend span{font-size:11px;margin-top:6px;opacity:.85}
-.actions{display:grid;grid-template-columns:1fr 1fr;gap:8px;margin-bottom:22px}
-.actions button{padding:8px;border:none;border-radius:6px;background:#00ff88;color:#000;font-weight:bold}
-.upload{display:block;border:1px dashed #00ff88;border-radius:999px;padding:14px 20px;cursor:pointer;text-align:center;margin-bottom:16px}
+body{
+  margin:0;
+  background:#020d06;
+  font-family:Consolas, monospace;
+  color:#00ff88;
+  min-height:100vh;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+}
+
+.box{
+  width:100%;
+  max-width:540px;
+  margin:16px;
+  padding:18px;
+  border:1px solid #00ff88;
+  border-radius:14px;
+  background:rgba(0,30,15,.96)
+}
+
+#backend{
+  display:flex;
+  flex-direction:column;
+  align-items:center;
+  margin-bottom:22px
+}
+
+.tick-circle,
+.spinner{
+  width:28px;
+  height:28px;
+  border:2px solid #00ff88;
+  border-radius:50%;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  font-size:16px;
+}
+
+.spinner{
+  border-top-color:transparent;
+  animation:spin 1s linear infinite;
+}
+
+@keyframes spin{to{transform:rotate(360deg)}}
+
+#backend span{
+  font-size:11px;
+  margin-top:6px;
+  opacity:.85
+}
+
+.actions{
+  display:grid;
+  grid-template-columns:1fr 1fr;
+  gap:8px;
+  margin-bottom:22px
+}
+
+.actions button{
+  padding:8px;
+  border:none;
+  border-radius:6px;
+  background:#00ff88;
+  color:#000;
+  font-weight:bold
+}
+
+.upload{
+  display:block;
+  border:1px dashed #00ff88;
+  border-radius:999px;
+  padding:14px 20px;
+  cursor:pointer;
+  text-align:center;
+  margin-bottom:16px
+}
+
 .upload input{display:none}
-#selected{border:1px solid #00ff88;border-radius:8px;padding:8px 12px;font-size:12px;margin-bottom:18px;display:none}
-#extractBtn{width:100%;margin-bottom:16px;padding:12px;border:none;border-radius:8px;background:#00ff88;color:#000;font-weight:bold}
+
+#selected{
+  border:1px solid #00ff88;
+  border-radius:8px;
+  padding:8px 12px;
+  font-size:12px;
+  margin-bottom:18px;
+  display:none
+}
+
+#extractBtn{
+  width:100%;
+  margin-bottom:16px;
+  padding:12px;
+  border:none;
+  border-radius:8px;
+  background:#00ff88;
+  color:#000;
+  font-weight:bold
+}
+
 #extractBtn:disabled{opacity:.4}
-#extracting{margin-bottom:10px;padding:6px;border:1px dashed #00ff88;text-align:center;display:none}
-@keyframes dots{0%{content:""}33%{content:"."}66%{content:".."}100%{content:"..."}}
-.dots::after{content:"";animation:dots 1s infinite steps(3)}
+
+#extracting{
+  margin-bottom:10px;
+  padding:6px;
+  border:1px dashed #00ff88;
+  text-align:center;
+  display:none
+}
+
+@keyframes dots{
+  0%{content:""}
+  33%{content:"."}
+  66%{content:".."}
+  100%{content:"..."}
+}
+
+.dots::after{
+  content:"";
+  animation:dots 1s infinite steps(3)
+}
+
 /* progress bar */
 #progressBox{
   display:none;
@@ -30,48 +138,104 @@ body{margin:0;background:#020d06;font-family:Consolas, monospace;color:#00ff88}
   overflow:hidden;
   margin-bottom:16px;
 }
+
 #progressBar{
   height:100%;
   width:0%;
   background:#00ff88;
 }
-.section{margin-top:20px;font-size:14px;text-decoration:underline}
-.grid{margin-top:10px;display:grid;gap:10px}
-.card{background:#011b10;border:1px solid #00ff8855;border-radius:10px;padding:10px 34px 10px 10px;position:relative}
-.card h4{margin:0;font-size:13px;color:#00ffaa}
-.card p{margin:6px 0 0;font-size:13px;word-break:break-word}
-.copy{position:absolute;top:8px;right:8px;width:18px;height:18px;border:1px solid #00ff88;border-radius:3px;font-size:11px;display:flex;align-items:center;justify-content:center;cursor:pointer}
-#toast{position:fixed;top:50%;left:50%;transform:translate(-50%,-50%);padding:10px 22px;border:1px solid #00ff88;background:#011b10;color:#00ff88;border-radius:8px;display:none;z-index:999}
+
+.section{
+  margin-top:20px;
+  font-size:14px;
+  text-decoration:underline
+}
+
+.grid{
+  margin-top:10px;
+  display:grid;
+  gap:10px
+}
+
+.card{
+  background:#011b10;
+  border:1px solid #00ff8855;
+  border-radius:10px;
+  padding:10px 34px 10px 10px;
+  position:relative
+}
+
+.card h4{
+  margin:0;
+  font-size:13px;
+  color:#00ffaa
+}
+
+.card p{
+  margin:6px 0 0;
+  font-size:13px;
+  word-break:break-word
+}
+
+.copy{
+  position:absolute;
+  top:8px;
+  right:8px;
+  width:18px;
+  height:18px;
+  border:1px solid #00ff88;
+  border-radius:3px;
+  font-size:11px;
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  cursor:pointer
+}
+
+#toast{
+  position:fixed;
+  top:50%;
+  left:50%;
+  transform:translate(-50%,-50%);
+  padding:10px 22px;
+  border:1px solid #00ff88;
+  background:#011b10;
+  color:#00ff88;
+  border-radius:8px;
+  display:none;
+  z-index:999
+}
 </style>
 </head>
 
 <body>
+
 <div class="box">
 
-<div id="backend">
-  <div class="tick-circle">✔</div>
-  <span>Backend Connected</span>
-</div>
+  <div id="backend">
+    <div id="backendIcon" class="spinner"></div>
+    <span id="backendText">Connecting to backend…</span>
+  </div>
 
-<div class="actions">
-  <button onclick="location.reload()">RESET</button>
-  <button onclick="exportTXT()">EXPORT TXT</button>
-</div>
+  <div class="actions">
+    <button onclick="location.reload()">RESET</button>
+    <button onclick="exportTXT()">EXPORT TXT</button>
+  </div>
 
-<label class="upload">
-  📂 Choose Image
-  <input type="file" id="img">
-</label>
+  <label class="upload">
+    📂 Choose Image
+    <input type="file" id="img">
+  </label>
 
-<div id="selected"></div>
+  <div id="selected"></div>
 
-<button id="extractBtn" onclick="extract()" disabled>EXTRACT DETAILS</button>
+  <button id="extractBtn" onclick="extract()" disabled>EXTRACT DETAILS</button>
 
-<div id="progressBox"><div id="progressBar"></div></div>
+  <div id="progressBox"><div id="progressBar"></div></div>
 
-<div id="extracting">Extracting<span class="dots"></span></div>
-<div id="out"></div>
-<div id="toast">COPIED</div>
+  <div id="extracting"><span id="statusText">Uploading image</span><span class="dots"></span></div>
+  <div id="out"></div>
+  <div id="toast">COPIED</div>
 
 </div>
 
@@ -79,19 +243,28 @@ body{margin:0;background:#020d06;font-family:Consolas, monospace;color:#00ff88}
 const BACKEND="https://image-details.onrender.com";
 const extractBtn=document.getElementById("extractBtn");
 const extracting=document.getElementById("extracting");
+const statusText=document.getElementById("statusText");
 const out=document.getElementById("out");
 const img=document.getElementById("img");
 const selected=document.getElementById("selected");
 const toast=document.getElementById("toast");
 const progressBox=document.getElementById("progressBox");
 const progressBar=document.getElementById("progressBar");
+const backendIcon=document.getElementById("backendIcon");
+const backendText=document.getElementById("backendText");
 
 let exportLines=[];
 
 /* backend check */
 (async()=>{
   try{
-    if((await fetch(BACKEND)).ok) extractBtn.disabled=false;
+    const res=await fetch(BACKEND);
+    if(res.ok){
+      backendIcon.className="tick-circle";
+      backendIcon.textContent="✔";
+      backendText.textContent="Backend Connected";
+      extractBtn.disabled=false;
+    }
   }catch{}
 })();
 
@@ -106,18 +279,30 @@ function showToast(){
   toast.style.display="block";
   setTimeout(()=>toast.style.display="none",500);
 }
+
 function copyValue(v){
   navigator.clipboard.writeText(v);
   showToast();
 }
+
 function section(title){
-  out.insertAdjacentHTML("beforeend",`<div class="section">${title}</div><div class="grid"></div>`);
+  out.insertAdjacentHTML("beforeend",
+    `<div class="section">${title}</div><div class="grid"></div>`
+  );
 }
+
 function makeCard(k,v){
   const val=(v??"Not Available");
   exportLines.push(`${k}: ${val}`);
-  return `<div class="card"><div class="copy" onclick="copyValue(\`${val}\`)">⧉</div><h4>${k}</h4><p>${val}</p></div>`;
+  return `
+    <div class="card">
+      <div class="copy" onclick="copyValue(\`${val}\`)">⧉</div>
+      <h4>${k}</h4>
+      <p>${val}</p>
+    </div>
+  `;
 }
+
 function renderSection(title,obj){
   if(!obj||Object.keys(obj).length===0) return;
   section(title);
@@ -127,13 +312,15 @@ function renderSection(title,obj){
   g.innerHTML=html;
 }
 
-/* -------- EXTRACT WITH UPLOAD PROGRESS -------- */
+/* -------- EXTRACT WITH UPLOAD FLOW -------- */
 function extract(){
   if(!img.files[0]) return alert("Image select karo");
 
   out.innerHTML="";
   exportLines=[];
   extractBtn.disabled=true;
+
+  statusText.textContent="Uploading image";
   extracting.style.display="block";
   progressBox.style.display="block";
   progressBar.style.width="0%";
@@ -148,17 +335,25 @@ function extract(){
     if(e.lengthComputable){
       const percent=(e.loaded/e.total)*100;
       progressBar.style.width=percent+"%";
+
+      if(percent>=100){
+        statusText.textContent="Extracting";
+      }
     }
   };
 
   xhr.onload=()=>{
-    progressBox.style.display="none";
-    const data=JSON.parse(xhr.responseText);
-    renderSection("🧼 Clean / Original Details",data.clean);
-    renderSection("🧠 Image Analysis",data.analysis);
-    renderSection("📦 Raw / Unknown Data",data.raw);
-    extracting.style.display="none";
-    extractBtn.disabled=false;
+    setTimeout(()=>{
+      progressBox.style.display="none";
+      extracting.style.display="none";
+
+      const data=JSON.parse(xhr.responseText);
+      renderSection("🧼 Clean / Original Details",data.clean);
+      renderSection("🧠 Image Analysis",data.analysis);
+      renderSection("📦 Raw / Unknown Data",data.raw);
+
+      extractBtn.disabled=false;
+    },1000); // ⬅️ 1 second extracting delay
   };
 
   xhr.send(fd);
@@ -172,5 +367,6 @@ function exportTXT(){
   a.click();
 }
 </script>
+
 </body>
 </html>
