--- a/index.html
+++ b/index.html
@@ -314,7 +314,7 @@ function renderSection(title,obj){
 
 /* -------- EXTRACT WITH UPLOAD FLOW -------- */
 function extract(){
-  if(!img.files[0]) return alert("Image select karo");
+  if(!img.files[0]) return alert("Select a Image");
 
   out.innerHTML="";
   exportLines=[];
